# rtav

./: .clang-format  .clang-tidy  .clangd  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  install.py  license.txt  readme.md  test
shader/: frag.fs  vert.vs
src/: .#main.c  audio.c  audio.h  entry.h  fft.c  fft.h  main.c  matrix.c  matrix.h  renderer.c  renderer.h  rndrdef.h  sys.c
